--- a/views/productioncomponents/productioncomponentsscripts.ejs
+++ b/views/productioncomponents/productioncomponentsscripts.ejs
@@ -42,7 +42,7 @@
             $(this).closest('tr').find('td').each(function () {
                 dataRow.push($(this).text());
             });
-            // console.log(dataRow);
+            // // console.log(dataRow);
             componentid = dataRow[0];
             status = dataRow[6];
             productid = dataRow[2];
@@ -63,7 +63,7 @@
                 data.forEach(item => {
                     let action = '';
                     let productid = item.productid;
-                    // console.log(productid)
+                    // // console.log(productid)
                     $.ajax({
                         type: 'GET',
                         url: '/products/getproductdetails',
@@ -77,7 +77,7 @@
                             const refinedcomponents = components
                                 .map(item => `Material: ${item.materialname}, Quantity: ${item.quantity + item.unitdeduction}, Cost: ₱${item.cost}`)
                                 .join('<br>');
-                            // console.log(components, " :Components");
+                            // // console.log(components, " :Components");
 
                             if (item.status === 'ACTIVE') {
                                 action = `
@@ -136,7 +136,7 @@
                     setTimeout(function () {
                         $(".progress").slideUp(function () {
                             if (data.msg === 'success') {
-                                // console.log(data.data);
+                                // // console.log(data.data);
                                 populateMaterialCountTable(data.data);
                             } else {
                                 console.error(data.msg);
@@ -151,8 +151,8 @@
         }
 
         $(document).on('click', '#activeBtn', function () {
-            console.log(countid);
-            console.log(status);
+            // console.log(countid);
+            // console.log(status);
             $.ajax({
                 type: 'POST',
                 url: '/materialcount/status',
@@ -215,7 +215,7 @@
             let componentid = $("#componentidmodal").val();
             let message = "";
             let overallTotal = 0;
-            console.log("components to update: ", componentsdata)
+            // console.log("components to update: ", componentsdata)
 
             if (componentid == '') { message += 'Component ID, '; }
             if ($('#componentsmodal-dataTable tbody tr').length === 0) {
@@ -243,32 +243,32 @@
                 warning('Required', message);
             }
             else {
-                console.log("Total Cost", overallTotal, componentsdata)
-                // $.ajax({
-                //     type: 'POST',
-                //     url: '/productioncomponents/edit',
-                //     data: {
-                //         componentid: componentid,
-                //         componentsdata: componentsdata,
-                //         productid: productid,
-                //         overallTotal: overallTotal
-                //     },
-                //     success: function (result) {
-                //         if (result.msg == 'success') {
-                //             success('Saved', 'Successfully')
-                //             LoadTable();
-                //             $('#editModal').modal('hide');
-                //         }
+                // console.log("Total Cost", overallTotal, componentsdata)
+                $.ajax({
+                    type: 'POST',
+                    url: '/productioncomponents/edit',
+                    data: {
+                        componentid: componentid,
+                        componentsdata: componentsdata,
+                        productid: productid,
+                        overallTotal: overallTotal
+                    },
+                    success: function (result) {
+                        if (result.msg == 'success') {
+                            success('Saved', 'Successfully')
+                            LoadTable();
+                            $('#editModal').modal('hide');
+                        }
 
-                //         if (result.msg == 'exist') {
-                //             warning('Exist', `Product already exist!`);
-                //         }
+                        if (result.msg == 'exist') {
+                            warning('Exist', `Product already exist!`);
+                        }
 
-                //     },
-                //     error: function (err) {
-                //         warning("Warning", err)
-                //     }
-                // })
+                    },
+                    error: function (err) {
+                        warning("Warning", err)
+                    }
+                })
             }
         });
 
@@ -276,7 +276,7 @@
             $('#componentidmodal').val(componentid);
             // $('#currentAccessName').val(currentAccessName);
             $('#editModal').modal('show');
-            // console.log(accesscode);
+            // // console.log(accesscode);
             $.ajax({
                 type: 'POST',
                 url: '/productioncomponents/getdetails',
@@ -286,7 +286,7 @@
                 success: function (result) {
                     if (result.msg == 'success') {
                         // success('Data Loaded', 'Successfully')
-                        // console.log(result.data)
+                        // // console.log(result.data)
                         let components = result.data
                         populateModalComponents(components)
                     }
@@ -317,16 +317,10 @@
                     unit: unit,
                     unitdeduction: unitdeduction
                 });
-                // materialname: materialname,
-                // materialid: material,
-                // unit: unit,
-                // cost: totalcost,
-                // quantity: quantity,
-                // unitdeduction: unitdeduction
 
             });
 
-            return jsonData;
+            return JSON.stringify(jsonData);
         }
 
         function populateModalComponents(data) {
@@ -383,7 +377,6 @@
                                 const row = $(this).closest('tr');
                                 const selectedValue = $(this).val();
 
-                                // Clear the quantity input and total cost if a unit deduction option is selected
                                 if (selectedValue) {
                                     row.find('.quantity-input').val('');
                                     row.find('.totalcost').text('₱0.00');
@@ -414,7 +407,7 @@
             const tr = input.closest('tr');
             const quantity = parseFloat(input.value) || 0;
             const totalCostElement = tr.querySelector('.totalcost');
-            console.log(unit, unitdeduct, cost)
+            // console.log(unit, unitdeduct, cost)
 
             let ratio = 1;
 
@@ -440,9 +433,9 @@
             }
 
             const computation = parseFloat(quantity) * ratio;
-            console.log("Ratio:", ratio, `${unit} to ${unitdeduct}`);
+            // console.log("Ratio:", ratio, `${unit} to ${unitdeduct}`);
             totalCost = parseFloat(cost) * computation;
-            console.log("Totalcost:",totalCost, input)
+            // console.log("Totalcost:",totalCost, input)
             totalCostElement.textContent = formatCurrency(totalCost);
         }
 
@@ -490,7 +483,7 @@
                 let price = RemoveCurrencyFormatting(row.find('.priceUnit').text());
                 let unit = row.find('.units').text();
                 let unitdeduct = row.find(`select[name=unitDeduct]`).val();
-                console.log('Quantity changed:', this.value);
+                // console.log('Quantity changed:', this.value);
 
                 updateTotalCost(this, price, unit, unitdeduct);
             });
@@ -504,7 +497,7 @@
                     let inputID = `editMaterial${dropdownCounterModal}`;
                     let hiddenID = `editMaterialID${dropdownCounterModal}`;
                     let container = result.data;
-                    // console.log("Edit Container:", container);
+                    // // console.log("Edit Container:", container);
                     let selectedTableMaterials = [];
                     $('#componentsmodal-dataTable tbody tr').each(function () {
                         const row = $(this);
@@ -561,7 +554,7 @@
                 dropdownElement.hide();
 
                 inputElement.trigger("change").prop("disabled", true);
-                // console.log(actualValue);
+                // // console.log(actualValue);
                 selectedMaterial.push(displayText);
                 row.find(".material-id").text(actualValue);
 
@@ -572,9 +565,9 @@
                         materialid: actualValue,
                     },
                     success: function (result) {
-                        // console.log(result.data)
+                        // // console.log(result.data)
                         let data = result.data;
-                        console.log("New Row Option:", data);
+                        // console.log("New Row Option:", data);
                         row.find(".units").text(data[0].unit);
                         row.find(".priceUnit").text(formatCurrency(data[0].price));
 
@@ -641,8 +634,8 @@
             if (message != "") {
                 warning('Required', `${message}`);
             } else {
-                console.log("Product:", product, "Components:", JSON.parse(data))
-                console.log("Total Cost:", overallTotal)
+                // console.log("Product:", product, "Components:", JSON.parse(data))
+                // console.log("Total Cost:", overallTotal)
                 $.ajax({
                     type: 'POST',
                     url: '/productioncomponents/save',
@@ -710,7 +703,7 @@
         function AddMaterialDropdown(dropdownID, displayText, actualValue, inputID, hiddenID) {
             const dropdownElement = $("#" + dropdownID);
             const hiddenInput = $("#" + hiddenID);
-            console.log("New Counter:", counter);
+            // console.log("New Counter:", counter);
 
             const newOption = $("<div>")
                 .addClass("dropdown-option")
@@ -731,7 +724,7 @@
                 dropdownElement.hide();
 
                 inputElement.trigger("change").prop("disabled", true);
-                // console.log(actualValue);
+                // // console.log(actualValue);
                 selectedMaterial.push(displayText);
                 row.find(".material-id").text(actualValue);
 
@@ -742,7 +735,7 @@
                         materialid: actualValue,
                     },
                     success: function (result) {
-                        // console.log(result.data)
+                        // // console.log(result.data)
                         let data = result.data;
                         $.each(data, function (index, item) {
                             let unit = item.unit;
@@ -780,7 +773,7 @@
                         warning("Warning", err);
                     }
                 });
-                // console.log("Clicked count:", counter);
+                // // console.log("Clicked count:", counter);
 
                 AddTableRow(counter);
                 counter++;
@@ -792,7 +785,7 @@
 
         function computecost(price, row, unitdeduct, unit) {
             row.find('.quantity').on('keyup', function () {
-                // console.log("Cost:", price, "Unit Deduction:", unitdeduct, "Actual Unit:", unit)
+                // // console.log("Cost:", price, "Unit Deduction:", unitdeduct, "Actual Unit:", unit)
                 let totalCost = 0;
                 let quantity = $(this).val();
                 let computation;
@@ -824,7 +817,7 @@
                 }
 
                 computation = parseFloat(quantity) * ratio;
-                console.log("Ratio:", ratio, `${unit} to ${unitdeduct}`);
+                // console.log("Ratio:", ratio, `${unit} to ${unitdeduct}`);
                 totalCost = parseFloat(price) * computation;
 
                 row.find('.totalcost').text(formatCurrency(totalCost));
@@ -832,7 +825,7 @@
         }
 
         function AddTableRow(counter) {
-            console.log("Counter Inside AddTableRow:", counter)
+            // console.log("Counter Inside AddTableRow:", counter)
             let NewRow = `<tr>
                     <td data-label="Material Name" class="custom-mobile-align">
                         <div class="col">
@@ -872,7 +865,7 @@
                     let inputID = `material${counter}`;
                     let hiddenID = `materialID${counter}`;
                     let container = result.data;
-                    // console.log(selectedMaterial);
+                    // // console.log(selectedMaterial);
 
                     $.each(container, (key, item) => {
                         if (item.status === "ACTIVE") {
@@ -925,7 +918,7 @@
                     let inputID = "product";
                     let hiddenID = "productID";
                     let container = result.data.reverse();
-                    // console.log(container)
+                    // // console.log(container)
                     $.each(container, (key, item) => {
                         if (item.status === "ACTIVE") {
                             let name = item.description;
@@ -952,7 +945,7 @@
                     let inputID = "material";
                     let hiddenID = "materialID";
                     let container = result.data;
-                    // console.log(container)
+                    // // console.log(container)
                     $.each(container, (key, item) => {
                         if (item.status === "ACTIVE") {
                             let name = item.productname;
@@ -978,7 +971,7 @@
                     $.each(container, (key, item) => {
                         let materialname = item.productname;
                         let materialid = item.productid;
-                        // console.log(materialname);
+                        // // console.log(materialname);
 
                         var listItem = $("<li></li>")
                             .text(materialname)
