--- a/views/productionmaterials/productionmaterialsscripts.ejs
+++ b/views/productionmaterials/productionmaterialsscripts.ejs
@@ -82,7 +82,7 @@
             var message = "";
             if (productname == '') { message += 'Product Name, ' }
             if (description == '') { message += 'Description, ' }
-            if (category == '') { message += 'Contact Info, ' }
+            if (category == '') { message += 'Please Add a Material Category First, ' }
             if (vendorid == '') { message += 'Vendor ID, ' }
             if (price == '') { message += 'Price, ' }
             if (units == '') { message += 'Unit, ' }
