--- a/views/production/production.ejs
+++ b/views/production/production.ejs
@@ -33,7 +33,7 @@
                         </div>
                         <div class="row mb-2 justify-content-center">
                             <div class="col-md-6">
-                                <label class="form-label" for="mu_password">Produced Quantity</label>
+                                <label class="form-label" for="producedquantity">Produced Quantity</label>
                                 <input autocomplete="off" id="producedquantity" name="producedquantity" type="number" class="form-control" placeholder="Enter quantity produced" aria-describedby="basic-addon1">        
                             </div>
                         </div>
@@ -96,7 +96,6 @@
                                                     <th class = "col-1">Material ID</th> 
                                                     <th class = "col-2">Material Name</th> 
                                                     <th class = "col-1">Cost</th>    
-                                                    <th class = "col-1">Units</th>      
                                                     <th class = "col-1">Quantity</th> 
                                                     <th class = "col-1">Current Stock</th> 
                                                 </tr>
