--- a/views/productinventory/productinventory.ejs
+++ b/views/productinventory/productinventory.ejs
@@ -11,7 +11,7 @@
                         </div>
                     </div>
                     <div class="card-body extend">
-                        <div class="table-responsive table-size-package">
+                        <div class="table-responsive table-size-package border">
                             <table class="table custom-mobile-table" id="product-datatable"
                                 width="100%" cellspacing="10">
                                 <thead class="table-header">
@@ -29,22 +29,17 @@
                                     <tr>
                                         <td data-label="Product Name" class="custom-mobile-align">
                                             <div class="col">
-                                                <div class="input-group">
-                                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select product" name="product"
-                                                        id="product" />
-                                                    <input autocomplete="off" type="hidden" id="productID" name="productID" />
-                                                </div>
+                                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select product" name="product" id="product" />
+                                                <input autocomplete="off" type="hidden" id="productID" name="productID" />
                                                 <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                                             </div>
                                         </td>
                                         <td data-label="product ID" class="custom-mobile-align product-id productid"></td>
                                         <td data-label="Branch ID" class="custom-mobile-align">
                                             <div class="col">
-                                                <div class="input-group">
-                                                    <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select branch" name="branch"
-                                                        id="branch" disabled/>
-                                                    <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
-                                                </div>
+                                                <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select branch" name="branch"
+                                                    id="branch" disabled />
+                                                <input autocomplete="off" type="hidden" id="branchID" name="branchID" />
                                                 <div class="custom-dropdown cdw-tableoption" id="branchDropdown"></div>
                                             </div>
                                         </td>
