--- a/views/purchaseorder/purchaseorderscripts.ejs
+++ b/views/purchaseorder/purchaseorderscripts.ejs
@@ -118,12 +118,9 @@
             let NewRow = `<tr>
                     <td data-label="Product Name" class="custom-mobile-align">
                         <div class="col">
-                            <div class="input-group">
-                                <input autocomplete="off" class="form-control text-center custom-input"
+                            <input autocomplete="off" class="form-control text-center custom-input"
                                     placeholder="Select product" name="product" id="product${counter}" />
-                                <input autocomplete="off" type="hidden" id="productID${counter}"
-                                    name="productID" />
-                            </div>
+                            <input autocomplete="off" type="hidden" id="productID${counter}" name="productID" />
                             <div class="custom-dropdown cdw-tableoption" id="productDropdown${counter}"></div>
                         </div>
                     </td>
