--- a/views/transferorder/transferorder.ejs
+++ b/views/transferorder/transferorder.ejs
@@ -189,12 +189,9 @@
                                 <tr>
                                     <td data-label="Product Name" class="custom-mobile-align">
                                         <div class="col">
-                                            <div class="input-group">
-                                                <input autocomplete="off" class="form-control text-center custom-input"
-                                                    placeholder="Select product" name="product" id="product" />
-                                                <input autocomplete="off" type="hidden" id="productID"
-                                                    name="productID" />
-                                            </div>
+                                            <input autocomplete="off" class="form-control text-center custom-input" placeholder="Select product"
+                                                name="product" id="product" />
+                                            <input autocomplete="off" type="hidden" id="productID" name="productID" />
                                             <div class="custom-dropdown cdw-tableoption" id="productDropdown"></div>
                                         </div>
                                     </td>
